# AoaCloudePunchIO

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.json  docker-compose.yml  main.py  main_visual.py  pyproject.toml
.github/workflows/: docker-publish.yml
docs/plan/: auto-punch-clock-plan.md  webhook-implementation-summary.md
docs/research/: README.md  analyze_site.py  login_page.html  main_page.html  punch_page.html
scripts/: check_permissions.sh
src/: __init__.py  config.py  models.py  punch_clock.py  retry_handler.py  scheduler.py  visual_test.py
src/models/: __init__.py  config.py  core.py  testing.py  webhook.py
src/punch_clock/: __init__.py  auth.py  browser.py  checker.py  executor.py  navigation.py  screenshot.py  service.py  verifier.py
src/webhook/: __init__.py  exceptions.py  manager.py
src/webhook/providers/: __init__.py  base.py  discord.py
